snapshots/syntax/library/functions/objects/createobject/createobject_in_select_case.snap
---
source: src/syntax/library/functions/objects/createobject.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SelectCaseStatement
      children:
        - kind: SelectKeyword
          text: Select
        - kind: Whitespace
          text: " "
        - kind: CaseKeyword
          text: Case
        - kind: Whitespace
          text: " "
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: appType
        - kind: Newline
          text: "\n"
        - kind: Whitespace
          text: "    "
        - kind: CaseClause
          children:
            - kind: CaseKeyword
              text: Case
            - kind: Whitespace
              text: " "
            - kind: StringLiteral
              text: "\"Excel\""
            - kind: Newline
              text: "\n"
            - kind: StatementList
              children:
                - kind: SetStatement
                  children:
                    - kind: Whitespace
                      text: "        "
                    - kind: SetKeyword
                      text: Set
                    - kind: Whitespace
                      text: " "
                    - kind: Identifier
                      text: app
                    - kind: Whitespace
                      text: " "
                    - kind: EqualityOperator
                      text: "="
                    - kind: Whitespace
                      text: " "
                    - kind: Identifier
                      text: CreateObject
                    - kind: LeftParenthesis
                      text: (
                    - kind: StringLiteral
                      text: "\"Excel.Application\""
                    - kind: RightParenthesis
                      text: )
                    - kind: Newline
                      text: "\n"
                - kind: Whitespace
                  text: "    "
        - kind: CaseClause
          children:
            - kind: CaseKeyword
              text: Case
            - kind: Whitespace
              text: " "
            - kind: StringLiteral
              text: "\"Word\""
            - kind: Newline
              text: "\n"
            - kind: StatementList
              children:
                - kind: SetStatement
                  children:
                    - kind: Whitespace
                      text: "        "
                    - kind: SetKeyword
                      text: Set
                    - kind: Whitespace
                      text: " "
                    - kind: Identifier
                      text: app
                    - kind: Whitespace
                      text: " "
                    - kind: EqualityOperator
                      text: "="
                    - kind: Whitespace
                      text: " "
                    - kind: Identifier
                      text: CreateObject
                    - kind: LeftParenthesis
                      text: (
                    - kind: StringLiteral
                      text: "\"Word.Application\""
                    - kind: RightParenthesis
                      text: )
                    - kind: Newline
                      text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SelectKeyword
          text: Select
        - kind: Newline
          text: "\n"
